[package]
name = "mmledger"
version = "0.1.13"
license = "Apache-2.0"
homepage = "https://github.com/jarkkojs/mmledger"
repository = "https://github.com/jarkkojs/mmledger"
description = "A ledger for confidential computing (CC) shims for tracking memory management system calls"
edition = "2021"
rust-version = "1.57"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
bitflags = "1.0.4"
lset = { git = "https://github.com/enarx/lset", branch = "main" }
primordial = { git = "https://github.com/enarx/primordial", branch = "main" }
