[package]
name = "mmledger"
version = "0.3.0"
license = "Apache-2.0"
homepage = "https://github.com/enarx/mmledger"
repository = "https://github.com/enarx/mmledger"
description = "A ledger for confidential computing (CC) shims for tracking memory management system calls"
edition = "2021"
rust-version = "1.57"
exclude = [".github/"]

[dependencies]
bitflags = "1.0.4"
lset = "0.3.0"
primordial = "0.5.0"
const-default = "1.0.0"

[dev-dependencies]
rstest = "0.16.0"
